[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/MainMenu3.png" type="Texture" id=1]
[ext_resource path="res://assets/Sem Título-1.png" type="Texture" id=2]
[ext_resource path="res://assets/ioVania3.png" type="Texture" id=3]
[ext_resource path="res://Scenes/main.gd" type="Script" id=4]
[ext_resource path="res://Assets/Font/MenuFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Sounds/Musics/By_Starlight_full_track.mp3" type="AudioStream" id=6]

[node name="main" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 470.0 ],
"_edit_vertical_guides_": [ 179.0 ]
}

[node name="MainMenu3" type="Sprite" parent="."]
position = Vector2( 192, 96 )
scale = Vector2( 0.48, 0.32 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = 150.0
margin_top = 473.0
margin_right = 364.0
margin_bottom = 538.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewGame" type="Button" parent="Control"]
margin_left = -100.0
margin_top = -340.0
margin_right = 31.0
margin_bottom = -299.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 5 )
action_mode = 0
text = "Novo Jogo"
icon = ExtResource( 2 )
flat = true
icon_align = 1
expand_icon = true

[node name="Control2" type="Control" parent="."]
margin_left = 398.0
margin_top = 473.0
margin_right = 612.0
margin_bottom = 538.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Quit" type="Button" parent="Control2"]
margin_left = -159.0
margin_top = -340.0
margin_right = -28.0
margin_bottom = -299.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 5 )
text = "Sair"
icon = ExtResource( 2 )
flat = true
icon_align = 1
expand_icon = true

[node name="Control3" type="Control" parent="."]
margin_left = 647.0
margin_top = 473.0
margin_right = 861.0
margin_bottom = 538.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Credits" type="Button" parent="Control3"]
margin_left = -502.0
margin_top = -340.0
margin_right = -371.0
margin_bottom = -299.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 5 )
text = "Créditos"
icon = ExtResource( 2 )
flat = true
icon_align = 1
expand_icon = true

[node name="IoVania3" type="Sprite" parent="."]
position = Vector2( 191, 87 )
scale = Vector2( 0.42449, 0.399194 )
texture = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.101

[connection signal="pressed" from="Control/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Control2/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Control3/Credits" to="." method="_on_Credits_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
